# mnk

./: .gitignore  README  build.py
cmake/: CMakeLists.txt
include/: ai.hpp  board.hpp  draw.hpp  init.hpp
src/: ai.cpp  board.cpp  draw.cpp  init.cpp  main.cpp
